Bug 442463 - plasma crashes on startup in DBusMenuImporter::menu() while loading an SNI
Summary: plasma crashes on startup in DBusMenuImporter::menu() while loading an SNI
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.22.5
Platform: openSUSE Linux
: NOR crash
Target Milestone: 1.0
Assignee: Konrad Materka
URL:
Keywords: drkonqi
: 441527 446671 446808 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-09-15 07:31 UTC by astraeamonkey
Modified: 2022-01-23 22:41 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description astraeamonkey 2021-09-15 07:31:30 UTC
Application: plasmashell (5.22.5)

Qt Version: 5.15.2
Frameworks Version: 5.85.0
Operating System: Linux 5.14.1-1-default x86_64
Windowing System: X11
Drkonqi Version: 5.22.5
Distribution: "openSUSE Tumbleweed"

-- Information about the crash:
- What I was doing when the application crashed:
Startup computer, with user auto login. On KDE initiation, plasma crashed and reloaded with bugzilla report request.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Plasma (plasmashell), signal: Segmentation fault
Content of s_kcrashErrorMessage: [Current thread is 1 (Thread 0x7fb8f2691980 (LWP 1873))]
[KCrash Handler]
#6  0x00007fb897e60834 in DBusMenuImporter::menu (this=0x0) at /usr/src/debug/plasma5-workspace-5.22.5-1.1.x86_64/libdbusmenuqt/dbusmenuimporter.cpp:333
#7  0x00007fb897e50506 in operator() (menu=0x55e6fbbc9600, __closure=0x55e6fbdd0fb0) at /usr/src/debug/plasma5-workspace-5.22.5-1.1.x86_64/dataengines/statusnotifieritem/statusnotifieritemsource.cpp:388
#8  QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<QMenu*>, void, StatusNotifierItemSource::refreshCallback(QDBusPendingCallWatcher*)::<lambda(QMenu*)> >::call (arg=<optimized out>, f=...) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:146
#9  QtPrivate::Functor<StatusNotifierItemSource::refreshCallback(QDBusPendingCallWatcher*)::<lambda(QMenu*)>, 1>::call<QtPrivate::List<QMenu*>, void> (arg=<optimized out>, f=...) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:256
#10 QtPrivate::QFunctorSlotObject<StatusNotifierItemSource::refreshCallback(QDBusPendingCallWatcher*)::<lambda(QMenu*)>, 1, QtPrivate::List<QMenu*>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=0x55e6fbdd0fa0, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:443
#11 0x00007fb8f520e033 in QtPrivate::QSlotObjectBase::call (a=0x7ffebdfba3d0, r=0x55e6fb4e0110, this=0x55e6fbdd0fa0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#12 doActivate<false> (sender=0x55e6fbe5a7b0, signal_index=3, argv=0x7ffebdfba3d0) at kernel/qobject.cpp:3886
#13 0x00007fb8f52074ff in QMetaObject::activate (sender=sender@entry=0x55e6fbe5a7b0, m=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffebdfba3d0) at kernel/qobject.cpp:3946
#14 0x00007fb897e63a72 in DBusMenuImporter::menuUpdated (_t1=0x55e6fbbc9600, this=<optimized out>) at /usr/src/debug/plasma5-workspace-5.22.5-1.1.x86_64/build/libdbusmenuqt/dbusmenuqt_autogen/include/moc_dbusmenuimporter.cpp:212
#15 DBusMenuImporter::slotGetLayoutFinished (this=<optimized out>, watcher=<optimized out>) at /usr/src/debug/plasma5-workspace-5.22.5-1.1.x86_64/libdbusmenuqt/dbusmenuimporter.cpp:461
#16 0x00007fb8f520e033 in QtPrivate::QSlotObjectBase::call (a=0x7ffebdfba510, r=0x55e6fbe5a7b0, this=0x55e6fbe217f0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#17 doActivate<false> (sender=0x55e6fbe62460, signal_index=3, argv=0x7ffebdfba510) at kernel/qobject.cpp:3886
#18 0x00007fb8f52074ff in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7fb8f5c755c0 <QDBusPendingCallWatcher::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffebdfba510) at kernel/qobject.cpp:3946
#19 0x00007fb8f5c55fff in QDBusPendingCallWatcher::finished (this=<optimized out>, _t1=<optimized out>) at .moc/moc_qdbuspendingcall.cpp:158
#20 0x00007fb8f5203fde in QObject::event (this=0x55e6fbe62460, e=0x55e6fb94b720) at kernel/qobject.cpp:1314
#21 0x00007fb8f5f6ba7f in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x55e6fbe62460, e=0x55e6fb94b720) at kernel/qapplication.cpp:3632
#22 0x00007fb8f51d79ea in QCoreApplication::notifyInternal2 (receiver=0x55e6fbe62460, event=0x55e6fb94b720) at kernel/qcoreapplication.cpp:1064
#23 0x00007fb8f51daa37 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x55e6f8b85100) at kernel/qcoreapplication.cpp:1821
#24 0x00007fb8f522f843 in postEventSourceDispatch (s=0x55e6f8c5c360) at kernel/qeventdispatcher_glib.cpp:277
#25 0x00007fb8f34ec80f in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#26 0x00007fb8f34ecb98 in ?? () from /lib64/libglib-2.0.so.0
#27 0x00007fb8f34ecc4f in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#28 0x00007fb8f522eec4 in QEventDispatcherGlib::processEvents (this=0x55e6f8c681f0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#29 0x00007fb8f51d63eb in QEventLoop::exec (this=this@entry=0x7ffebdfba900, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#30 0x00007fb8f51de6d0 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#31 0x00007fb8f562419c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1867
#32 0x00007fb8f5f6b9f5 in QApplication::exec () at kernel/qapplication.cpp:2824
#33 0x000055e6f7b63479 in main (argc=<optimized out>, argv=0x7ffebdfbaaf0) at /usr/src/debug/plasma5-workspace-5.22.5-1.1.x86_64/shell/main.cpp:254
[Inferior 1 (process 1873) detached]

Possible duplicates by query: bug 442147, bug 441527, bug 440841, bug 440840, bug 440665.

Reported using DrKonqi
Comment 1 Nicolas Fella 2021-11-20 13:23:42 UTC
*** Bug 441527 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2021-12-08 21:09:42 UTC
*** Bug 446671 has been marked as a duplicate of this bug. ***
Comment 3 Nicolas Fella 2021-12-14 01:05:55 UTC
*** Bug 446808 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2022-01-23 21:59:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1397
Comment 5 Konrad Materka 2022-01-23 22:37:32 UTC
Git commit 645eba990332b0d614a32a4bcae7fb7f1d049e8f by Konrad Materka.
Committed on 23/01/2022 at 22:23.
Pushed by ngraham into branch 'master'.

applets/systemtray: Do not delay menuImporter deletion
FIXED-IN: 5.24.0

M  +1    -1    applets/systemtray/statusnotifieritemsource.cpp
M  +1    -1    dataengines/statusnotifieritem/statusnotifieritemsource.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/645eba990332b0d614a32a4bcae7fb7f1d049e8f
Comment 6 Nate Graham 2022-01-23 22:41:23 UTC
Git commit c3a28eb6b088c37dbe45f332e26773f474cc99a3 by Nate Graham, on behalf of Konrad Materka.
Committed on 23/01/2022 at 22:41.
Pushed by ngraham into branch 'Plasma/5.24'.

applets/systemtray: Do not delay menuImporter deletion
FIXED-IN: 5.24.0


(cherry picked from commit 645eba990332b0d614a32a4bcae7fb7f1d049e8f)

M  +1    -1    applets/systemtray/statusnotifieritemsource.cpp
M  +1    -1    dataengines/statusnotifieritem/statusnotifieritemsource.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/c3a28eb6b088c37dbe45f332e26773f474cc99a3