applets/systemtray: Do not delay menuImporter deletion

BUG: 442463
FIXED-IN: 5.24.0


(cherry picked from commit 645eba990332b0d614a32a4bcae7fb7f1d049e8f)